--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag murali90102/techdome-frontend:$(date +%s)
+    - name: Docker login 
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PWD
+    - name: Docker push
+      run: docker push murali90102/techdome-frontend:$(date +%s)
