--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag murali90102/techdome-frontend:$(date +%s)
+      run: docker build . --file Dockerfile --tag murali90102/techdome-frontend:2
     - name: Docker login 
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PWD }}
     - name: Docker push
-      run: docker push murali90102/techdome-frontend:$(date +%s)
+      run: docker push murali90102/techdome-frontend:2
