--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
+    - name: get env
+      run: env
       run: docker build . --file Dockerfile --tag murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
     - name: Docker login 
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PWD }}
