Added Sonarqube Scan Action

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: get env
-      run: env
+    # - name: get env
+    #   run: env
+    - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
