--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         host: ${{ secrets.SONAR_HOST_URL }}
         login: ${{ secrets.SONAR_TOKEN }}
-        projectBaseDir: "src"
+        #projectBaseDir: "src"
         projectKey: "Techdome-frontend"
       
     - name: Build the Docker image
