--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,9 +9,8 @@ on:
 jobs:
 
   build:
-
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    # runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
@@ -43,6 +42,7 @@ jobs:
 
     # - name: Sleep
     #   run: sleep 600 
-
+  build:
+    runs-on: self-hosted
     - name: Deployments in K8s
       run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
