--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,8 @@ jobs:
 
     # - name: Sleep
     #   run: sleep 600 
-  build:
+    
+  deployment:
     runs-on: self-hosted
     - name: Deployments in K8s
       run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
