--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,5 +45,6 @@ jobs:
 
   deployment:
     runs-on: self-hosted
+    steps:
       - name: Deployments in K8s
         run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
