--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,26 +9,27 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
-    # runs-on: self-hosted
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
     # - name: get env
     #   run: env
-    # - uses: sonarsource/sonarqube-scan-action@master
-    #   env:
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    #   with:
-    #     projectKey: "technode-frontend"
-      
-    - uses: kitabisa/sonarqube-action@master
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }
       with:
-        host: ${{ secrets.SONAR_HOST_URL }}
-        login: ${{ secrets.SONAR_TOKEN }}
-        #projectBaseDir: "src"
         projectKey: "Techdome-frontend"
+      
+    # - uses: kitabisa/sonarqube-action@master
+    #   with:
+    #     host: ${{ secrets.SONAR_HOST_URL }}
+    #     login: ${{ secrets.SONAR_TOKEN }}
+    #     #projectBaseDir: "src"
+    #     projectKey: "Techdome-frontend"
       
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
@@ -37,14 +38,15 @@ jobs:
     - name: Docker push
       run: docker push murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
 
-    - name: Generate config file
-      run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
+    
 
     # - name: Sleep
     #   run: sleep 600 
 
-  deployment:
-    runs-on: self-hosted
-    steps:
+  # deployment:
+  #   runs-on: self-hosted
+  #   steps:
+      - name: Generate config file
+        run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
       - name: Deployments in K8s
         run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
