--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,8 +37,10 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PWD }}
     - name: Docker push
       run: docker push murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
-
-    
+    - name: Generate config file
+        run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
+    - name: Deployments in K8s
+      run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
 
     # - name: Sleep
     #   run: sleep 600 
@@ -46,7 +48,7 @@ jobs:
   # deployment:
   #   runs-on: self-hosted
   #   steps:
-      - name: Generate config file
-        run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
-      - name: Deployments in K8s
-        run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
+      # - name: Generate config file
+      #   run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
+      # - name: Deployments in K8s
+      #   run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
