--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: self-hosted
 
     steps:
+    - name: Remove File
+      run: find ./ -iname .sonar_lock ; rm -rf Techdome-frontend/.scannerwork/.sonar_lock
     - uses: actions/checkout@v3
     # - name: get env
     #   run: env
