--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,15 +9,13 @@ on:
 jobs:
 
   build:
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    # runs-on: self-hosted
 
     steps:
-    - name: Remove File
-      run: find ./ -iname .sonar_lock ; rm -rf Techdome-frontend/.scannerwork/.sonar_lock
+    # - name: Remove File
+    #   run: find ./ -iname .sonar_lock ; rm -rf Techdome-frontend/.scannerwork/.sonar_lock
     - uses: actions/checkout@v3
-    # - name: get env
-    #   run: env
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       env:
@@ -39,18 +37,20 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PWD }}
     - name: Docker push
       run: docker push murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
-    - name: Generate config file
-      run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
-    - name: Deployments in K8s
-      run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
+    # - name: Generate config file
+    #   run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
+    # - name: Deployments in K8s
+    #   run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
 
     # - name: Sleep
     #   run: sleep 600 
 
-  # deployment:
-  #   runs-on: self-hosted
-  #   steps:
-      # - name: Generate config file
-      #   run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
-      # - name: Deployments in K8s
-      #   run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
+  deployment:
+    runs-on: self-hosted
+    needs: build
+    steps:
+    - uses: actions/checkout@v3
+    - name: Generate config file
+      run: echo "${{ secrets.KUBECTL_CONFIG }}" > config
+    - name: Deployments in K8s
+      run: kubectl --kubeconfig=config apply -f k8_deployment/techdome-frontend.yaml
