--- a/k8_deployment/techdome-frontend.yaml
+++ b/k8_deployment/techdome-frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name:  techdome-frontend
-          image: murali90102/techdome-frontend: Always
+          image: murali90102/techdome-frontend
           imagePullPolicy: Always
           resources:
             requests:
