--- a/.github/workflows/Auto_commit.yaml
+++ b/.github/workflows/Auto_commit.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Docker push
       run: docker push murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
     - name: Update Tag in techdome-frontend.yaml
-      run: sed -i "s/techdome-frontend:1/techdome-frontend:$GITHUB_RUN_NUMBER/1" k8_deployment/techdome-frontend.yaml
+      run: sed -i "s/techdome-frontend:.*/techdome-frontend:$GITHUB_RUN_NUMBER/1" k8_deployment/techdome-frontend.yaml
     - name: See changed files
       run: git status && ls -lrt k8_deployment/techdome-frontend.yaml && cat k8_deployment/techdome-frontend.yaml
     
