--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    # - name: Remove File
-    #   run: find ./ -iname .sonar_lock ; rm -rf Techdome-frontend/.scannerwork/.sonar_lock
+    - name: Clean UP
+      run: docker rmi -f $(docker images -qa) && docker system prune -f
+
     - uses: actions/checkout@v3
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
@@ -31,6 +32,8 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PWD }}
     - name: Docker push
       run: docker push murali90102/techdome-frontend:$GITHUB_RUN_NUMBER
+    - name: Clean UP
+      run: docker rmi -f $(docker images -qa) && docker system prune -f
     
 
   deployment:
